fixed style issue where label background was visible when hover border applied on below textbox.

--- a/InventoryManagerWebsite/Content/Site.css
+++ b/InventoryManagerWebsite/Content/Site.css
@@ -60,7 +60,7 @@ textarea {
     position: absolute;
     top: -10px;
     left: 20px;
-    background-color: white;
+    background-color: transparent;
     max-width: none;
 }
 
